tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__Catwalks-AAAAAAAAAAAAAAAAAAAM3g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3294,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Catwalks Mod adds several cosmetic blocks to deck out your factory.\n\nScaffolds and Builder's Scaffolds are useful for building up in the air before you get access to flight. They can be climbed like ladders, and break instantly when punched. You will also not fall off of them if you let go of movement keys while climbing. If you right-click the Builder's Scaffold with a solid block, the scaffold will be replaced by that block.\n\nCatwalks can connect to each other to form a wide passageway. You can decorate them by attaching Caution Tape or Rope Lights, the latter provide dim lighting.\n\nCaged Ladders give you a way to move up and down without a risk of falling off. Climbing them is much faster than vanilla ladders.\n\nSupport Columns are purely decorative. They connect to each other in all directions. They also work as ladders.\n\nSturdy Rails let you run minecart tracks across gaps without supports. Right-click the Sturdy Powered Rail with a Blowtorch to power it permanently, you don't need a redstone torch. If you don't have enough distractions already, use them to build a rollercoaster!\n\nThe Blowtorch lets you remove railings or even the floor from a catwalk by right-clicking. Use it to make an opening to let you walk onto the catwalk, or if you don't know what an \"OSHA violation\" is. The same function can be performed by a GT or Forge-compatible wrench, so you don't actually need to make this.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Catwalks",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
