tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ChiselAlltheThin-AAAAAAAAAAAAAAAAAAAHkw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1939,
  "prerequisites": [
    97,
    1935
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If, for some reason, you need to chisel a large number of items, the autochisel is what you want.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Chisel All the Things",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97,
    1935
  ],
  "rewards": [],
  "tasks": []
}
