tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ConcreteandGTSto-AAAAAAAAAAAAAAAAAAAHmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1944,
  "prerequisites": [
    554,
    1935
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Chisel can also transform Concrete and GT stones into new interesting blocks. Some of the GT stone blocks will even prevent mobs from spawning on top. Concrete will let you run faster.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Concrete and GT Stones",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    554,
    1935
  ],
  "rewards": [],
  "tasks": []
}
