tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ConstructingAddi-U0LzQUUkRIi-cY3ZpT4uiQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4982182441457168009,
  "prerequisites": [
    11152394015753612261,
    1406
  ],
  "properties": {
    "auto_claim": false,
    "desc": "[quest]Advanced MagLev Pylon III (EV)[/quest]\n\nThe EV Pylon has a §c48§r block radius (97x97x97 cube centered around the pylon)\n\nRadius is §9halved§r if the pylon is unpowered. \n\n[note]The Protoss would be very happy with you[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Constructing Additional Pylons!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11152394015753612261,
    1406
  ],
  "rewards": [],
  "tasks": []
}
