tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__CrystalShulkerBo-DSkXvzhRSKiwFLJywGDMRg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4058104628856802374,
  "prerequisites": [
    13073740252492184943,
    1148,
    5334881515063456948
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An enhanced version of the Diamond Shulker that allows you to see the contents within.\n\nHas §n108§r slots.\n\n[note]Can be Dyed![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lCrystal Shulker Box",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13073740252492184943,
    1148,
    5334881515063456948
  ],
  "rewards": [],
  "tasks": []
}
