tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__DoubletheRadiusD-LaLMF5rFQ0SxAZ5o-C-r5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11152394015753612261,
  "prerequisites": [
    770,
    5530218496702688178
  ],
  "properties": {
    "auto_claim": false,
    "desc": "[quest]Advanced MagLev Pylon II (HV)[/quest]\n\nThe HV Pylon has a §c32§r block radius (65x65x65 cube centered around the pylon)\n\nRadius is §9halved§r if the pylon is unpowered. ",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Double the Radius = Double the Fun!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    770,
    5530218496702688178
  ],
  "rewards": [],
  "tasks": []
}
